Add JourneyGeoPos API
